--- a/css/main.css
+++ b/css/main.css
@@ -17,12 +17,21 @@ body::-webkit-scrollbar {
 }
 
 .principal {
-  height: 100vh;
   width: 100%;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 .principal .principalForm {
-  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  height: 90vh;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+.principal .principalForm .datosProp {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -30,23 +39,106 @@ body::-webkit-scrollbar {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  text-align: center;
-  margin: auto;
+  padding: 2rem;
+  border: solid #4c76ff;
+  border-radius: 1rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
-.principal .principalForm .operacion {
+.principal .principalForm .calculo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: solid #4c76ff;
+  border-radius: 1rem;
 }
-.principal .principalForm .operacion div {
-  margin: 1rem;
+.principal .principalForm .calculo .operacion {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
-.principal .principalForm .calculo {
-  margin: 1rem 0 1rem 0;
+.principal .principalForm .calculo .dimensiones {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
-.principal .principalForm .btnPrincipal {
-  width: 15%;
+.principal .principalForm .calculo .dimensiones .dimensionesTotales {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.principal .principalForm .calculo .dimensiones .dimensionesTotales .dimensionesTotalesInputs {
+  width: 45%;
+  margin: auto;
+}
+.principal .principalForm .calculo .dimensiones .dimensionesTipos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.principal .principalForm .calculo .dimensiones .dimensionesTipos .dimensionesTiposInputs {
+  width: 30%;
+  margin: auto;
+}
+.principal .principalForm .calculo .extras {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding: 1rem;
+  width: 95%;
+  border: solid #b3b3b3;
+  border-radius: 1rem;
+}
+.principal .principalForm .calculo .extras .estado {
+  width: 80%;
+}
+.principal .principalForm .calculo .extras .estado div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.principal .principalForm .calculo .extras .amenities {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.principal .principalForm .calculo .extras .amenities .amenitiesTipos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
