--- a/scss/_principal.scss
+++ b/scss/_principal.scss
@@ -1,30 +1,83 @@
 .principal {
-    height: 100vh;
     width: 100%;
-    margin-top: 2rem;
+    margin-top: 1rem;
 
     .principalForm {
-        width: 80%;
         display: flex;
-        flex-direction: column;
-        text-align: center;
-        margin: auto;
+        flex-wrap: wrap;
+        height: 90vh;
+        justify-content: space-evenly;
 
-        .operacion {
+        .datosProp {
             display: flex;
-            justify-content: center;
-
-            div {
-                margin: 1rem;
-            }
+            flex-direction: column;
+            padding: 2rem;
+            border: solid #4c76ff;
+            border-radius: 1rem;
+            justify-content: space-between;
         }
 
         .calculo {
-            margin: 1rem 0 1rem 0;
-        }
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+            border: solid #4c76ff;
+            border-radius: 1rem;
 
-        .btnPrincipal {
-            width: 15%;
+            .operacion {
+                width: 50%;
+                display: flex;
+                justify-content: space-evenly;
+            }
+
+            .dimensiones {
+                display: flex;
+                flex-direction: column;
+
+                .dimensionesTotales {
+                    display: flex;
+                    .dimensionesTotalesInputs {
+                        width: 45%;
+                        margin: auto;
+                    }
+                }
+
+                .dimensionesTipos {
+                    display: flex;
+                    .dimensionesTiposInputs {
+                        width: 30%;
+                        margin: auto;
+                    }
+                }
+            }
+
+            .extras {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                padding: 1rem;
+                width: 95%;
+                border: solid #b3b3b3;
+                border-radius: 1rem;
+                .estado {
+                    width: 80%;
+                    div {
+                        display: flex;
+                    }
+                }
+
+                .amenities {
+                    width: 90%;
+                    display: flex;
+                    flex-direction: column;
+                    .amenitiesTipos {
+                        display: flex;
+                        justify-content: space-evenly;
+                    }
+                }
+            }
         }
     }
 }
