--- a/scss/_principal.scss
+++ b/scss/_principal.scss
@@ -78,6 +78,19 @@
                     }
                 }
             }
+
+            .resultados {
+                display: flex;
+
+                div {
+                    margin: 1rem;
+
+                    .btnPrincipal {
+                        width: 10rem;
+                        height: 5rem;
+                    }
+                }
+            }
         }
     }
 }
