Agregue tabla donde se muestran las propiedades guardadas. Modifique el header

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,4 +1,22 @@
 .headerNavbar {
     height: 5rem;
     width: 100%;
+    div {
+        a {
+            color: white;
+        }
+        .logo {
+            font-size: 2rem;
+        }
+        div {
+            display: flex;
+            justify-content: center;
+            .navbarBtns {
+                width: 80%;
+                display: flex;
+                justify-content: space-evenly;
+                font-size: 1.3rem;
+            }
+        }
+    }
 }
