--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,30 @@ body::-webkit-scrollbar {
   height: 5rem;
   width: 100%;
 }
+.headerNavbar div a {
+  color: white;
+}
+.headerNavbar div .logo {
+  font-size: 2rem;
+}
+.headerNavbar div div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.headerNavbar div div .navbarBtns {
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  font-size: 1.3rem;
+}
 
 .principal {
   width: 100%;
@@ -26,7 +50,6 @@ body::-webkit-scrollbar {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  height: 90vh;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
@@ -153,4 +176,17 @@ body::-webkit-scrollbar {
 .principal .principalForm .calculo .resultados div .btnPrincipal {
   width: 10rem;
   height: 5rem;
+}
+.principal .misProps {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 1.5rem;
+  padding: 2rem;
+  border: solid #4c76ff;
+  border-radius: 1rem;
 }
