--- a/scss/_misProps.scss
+++ b/scss/_misProps.scss
@@ -13,6 +13,7 @@
 
 .propsView {
     display: flex;
+    flex-wrap: wrap;
     margin: 2rem;
     justify-content: space-evenly;
     .noProps-text {
@@ -25,8 +26,8 @@
         display: flex;
         flex-direction: column;
         padding: 1rem;
-        width: max-content;
-        height: max-content;
+        margin-bottom: 1rem;
+        width: 30%;
         border: solid #4c76ff;
         border-radius: 1rem;
 
@@ -34,7 +35,7 @@
             text-align: center;
             margin-bottom: 1rem;
             & img {
-                border-radius: 1rem;
+                width: 20%;
             }
         }
     }
