Finalizo prototipo de inicio de sesion. Posible para un solo usuario

--- a/css/main.css
+++ b/css/main.css
@@ -246,11 +246,11 @@ body::-webkit-scrollbar {
   width: 20%;
 }
 
-main {
+.mainLogin {
   width: 50%;
   text-align: center;
   margin: auto;
 }
-main form {
+.mainLogin form {
   margin: 2rem;
 }
