--- a/css/main.css
+++ b/css/main.css
@@ -275,3 +275,24 @@ body::-webkit-scrollbar {
           justify-content: space-evenly;
   margin: 1rem;
 }
+
+.main404 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: auto;
+  margin-top: 2rem;
+  width: 50%;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  text-align: center;
+}
+.main404 img {
+  width: 50%;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
